<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright 2018 Jonathan Merritt
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/dest_overview"
      android:icon="@drawable/ic_overview"
      android:title="@string/title_overview"/>

  <item
      android:id="@+id/dest_frame"
      android:icon="@drawable/ic_frame"
      android:title="@string/title_frame"/>

  <item
      android:id="@+id/dest_linear"
      android:icon="@drawable/ic_linear"
      android:title="@string/title_linear"/>

  <item
      android:id="@+id/dest_recycler"
      android:icon="@drawable/ic_recycler"
      android:title="@string/title_recycler"/>

  <item
      android:id="@+id/dest_relative"
      android:icon="@drawable/ic_relative"
      android:title="@string/title_relative"/>
</menu>